--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,8 @@
 name: CI
 
 # Controls when the workflow will run
-on:
+on: # Decimos en que evento se van a ejecutar las tareas
+    # En este caso se ejecutara cuando se realice un push y un pull request
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
@@ -11,26 +12,17 @@ on:
     branches: [ "master" ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  workflow_dispatch: # nos dice si queremos ejecutar un workflow manualmente
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
+jobs: # Son serie de pasos que queremos que ejecute el programa
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Corre una maquina de ubuntu
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    steps: # dentro de la maquina de ubuntu corre estos pasos
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: "Mostrar mensaje"
+        run: echo "Hola mundo"
