--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,4 +40,6 @@ jobs: # Son serie de pasos que queremos que ejecute el programa
       - name: "Mostrando variables por defecto"
         run: |
           echo "Evento: ${{toJSON(github.event)}}"
+          echo "Github actor: $GITHUB_ACTOR"
+          ECHO "Github repository: $GITHUB_REPOSITORY"
 
