--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
+# Todo esto es un workflow
 name: CI
 
 # Controls when the workflow will run
@@ -22,6 +22,10 @@ jobs: # Son serie de pasos que queremos que ejecute el programa
       urs: anderson
       pw: hola90
       port: 8080
+
+      # Variables secretas como las de acceso a la DB
+      username: ${{secrets.USERNAME}}
+      userpw: ${{secrets.USERPW}}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest # Corre una maquina de ubuntu
 
@@ -37,6 +41,10 @@ jobs: # Son serie de pasos que queremos que ejecute el programa
           echo "Usuario: ${{env.urs}}"
           echo "Password: ${{env.pw}}" 
           echo "Puerto: ${{env.port}}"
+
+          # Mostrando variables secrets
+          echo "USERNAME: ${{env.username}}"
+          echo "USERPW": ${{env.userpw}}
       - name: "Mostrando variables por defecto"
         run: |
           echo "Evento: ${{toJSON(github.event)}}"
