--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,9 +41,9 @@ jobs: # Son serie de pasos que queremos que ejecute el programa
           echo "Usuario: ${{env.urs}}"
           echo "Password: ${{env.pw}}" 
           echo "Puerto: ${{env.port}}"
-          
+
           echo "USERNAME: ${{env.username}}"
-          echo "USERPW": ${{env.userpw}}
+          echo "USERPW": ${{env.userpw}}"
       - name: "Mostrando variables por defecto"
         run: |
           echo "Evento: ${{toJSON(github.event)}}"
