--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,7 +41,9 @@ jobs: # Son serie de pasos que queremos que ejecute el programa
           echo "Usuario: ${{env.urs}}"
           echo "Password: ${{env.pw}}" 
           echo "Puerto: ${{env.port}}"
-
+      - name: "Mostrano valores solo si el usuario es correcto"
+        if: ${{env.username != '' && env.userpw != ''}}
+        run: |
           echo "USERNAME: ${{env.username}}"
           echo "USERPW": ${{env.userpw}}"
       - name: "Mostrando variables por defecto"
